<resources>
    <string name="app_name">InterviewIN</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="interview">Interview</string>
    <string name="in">IN</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_greeting2">Hello again, you\'ve been missed</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_login_with">Or Login With</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_register_with">Or Register With</string>
    <string name="login_now">Login Now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hello">Hello!</string>
    <string name="register_to_get_started">Register to get started</string>
    <string name="forgot_password_desc">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="remember_password">Remember Password?</string>
    <string name="send_code">Send Code</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_desc">Enter the verification code we just sent on your email address.</string>
    <string name="verify">Verify</string>
    <string name="didnt_received_code">Didn’t received code?</string>
    <string name="resend">Resend</string>
    <string name="create_new_password">Create new password</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_changed">Password Changed!</string>
    <string name="password_changed_success">Your password has been changed successfully.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="logo_content_desc">Application Logo</string>
    <string name="title_activity_roles">RolesActivity</string>
    <string name="whats_your_positions">What’s your positions?</string>
    <string name="candidate">Candidate</string>
    <string name="recruiter">Recruiter</string>
    <string name="select_role">Role</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="email_error">Email cannot be empty</string>
    <string name="password_error">Password must be at least 8 characters long</string>

    <string-array name="roles">
        <item>Candidate</item>
        <item>Company</item>
    </string-array>
    <string name="title_activity_candidate">CandidateActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_interview">Interview</string>
    <string name="title_profile">Profile</string>
    <string name="name">Name</string>
    <string name="write_your_answer">Write your answer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="candidates">Candidate</string>
    <string name="candidatepage">Ini page Candidate</string>
    <string name="recruiterpage">Ini page Recruiter</string>
    <string name="judul">What’s your positions?</string>
    <string name="InterviewIN">InterviewIN</string>
    <string name="allIN">All Interviews</string>
    <string name="nodata">You havent done any interviews yet</string>
    <string name="search">The position you apply for</string>
    <string name="Jobdesc">Job Description</string>
    <string name="Jobreq">Job Requiremets</string>
</resources>