<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_interview"
        android:name="com.example.interviewin.ui.candidate.ui.interview.InterviewFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_candidate_interview" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.interviewin.ui.candidate.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_candidate_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.interviewin.ui.candidate.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_candidate_profile" />
</navigation>